--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </td>
         </tr>
     </table>
-    <a href="contactme.html">Contact me</a>
+    <a href="Contactme.html">Contact me</a>
 </body>
 
 </html>
